Phase 2: React frontend with CodeMirror, animated visualizations, and step controls
Backend:
- Added /api/parse-signature endpoint for dynamic input generation
- Added ParseSignatureRequest/Response DTOs
- Added input validation on all endpoints (fail fast)
- Added @RequestMapping('/api') at controller class level

Frontend (Vite + React):
- CodeMirror 6 editor with Java syntax highlighting + One Dark theme
- Animated code viewer with Framer Motion line highlighting
- Dynamic argument inputs from parsed method signature
- Variables panel with diff highlighting (changed values pulse green)
- Array visualizer with animated boxes and change detection
- Step controls: first/prev/play/next/last + scrub slider + speed
- Auto-play with requestAnimationFrame for smooth playback
- Centralized API client (src/api/visualize.js)
- Custom hooks: useVisualizer (state machine), useStepPlayer (auto-play)
- CSS design system with custom properties (tokens) for theming
- BEM-style component CSS, responsive grid layout
- Keyboard shortcut: Ctrl+Enter to run

Documentation:
- Updated AGENTS.md with Phase 2 architecture, frontend conventions,
  component extension guide, design patterns section
- Updated README.md with frontend setup, tech stack, updated roadmap