@@ -19,17 +19,41 @@ submissions never include one), and the tool:
 6. Returns the trace as JSON for a frontend to render as
    code-highlight + animated data-structure visualization
 
-This is **Phase 1** of a multi-phase project. Phase 1 scope is intentionally
-narrow: arrays, Strings, primitives, and standard `java.util` collections
-(HashMap/HashSet/ArrayList) via `toString()`. LinkedList/Tree/Graph need
-real pointer-chasing and are explicitly deferred to Phase 3/4 — see
-README.md's Roadmap section.
+This is a **multi-phase project**. Phase 1 (backend core) and Phase 2
+(React frontend) are complete. The backend handles arrays, Strings,
+primitives, and standard `java.util` collections (HashMap/HashSet/ArrayList)
+via `toString()`. LinkedList/Tree/Graph need real pointer-chasing and are
+deferred to Phase 3/4 — see README.md's Roadmap section.
 
 **Read `README.md` in full before making changes** — it has the complete
 architecture, the full list of bugs found and fixed (with root causes, not
 just symptoms), and the current known limitations. Do not duplicate
 information here that's already in the README; this file is about *how to
 work on the project*, not *what the project is*.
+
+---
+
+## Architecture overview (two-process setup)
+
+This project has **two separate processes** during development:
+
+1. **Spring Boot backend** (port 8080) — Java/Maven, uses JDI to
+   compile and trace user code. Start with:
+   ```bash
+   set JDK_JAVA_OPTIONS=--add-modules jdk.jdi
+   mvn spring-boot:run
+   ```
+
+2. **Vite + React frontend** (port 5173) — the UI. Start with:
+   ```bash
+   cd frontend
+   npm run dev
+   ```
+
+The Vite dev server proxies `/api/*` requests to `localhost:8080`, so
+no CORS issues during development. In production, the frontend is built
+to static files (`npm run build`) and served directly by Spring Boot
+from `src/main/resources/static/`.
 
 ---
 
@@ -46,7 +70,7 @@ whether you have:
 If any of these are missing (this has been the case in the development
 sandbox used so far), **you cannot compile-test or run-test this project
 directly**. The actual build/run environment is the project owner's own
-machine (confirmed: JDK 17+, Maven 3.8+, Windows, IntelliJ).
+machine (confirmed: JDK 17+, Maven 3.8+, Node 24+, Windows, IntelliJ).
 
 ### What to do about it — do not skip this
 
@@ -120,38 +144,109 @@ from a prior summary — prior summaries can be stale or incomplete.
   against your exact input and confirmed the output" from "this should
   work based on documented API behavior, but I couldn't execute it" — the
   user wants to know which one applies for every fix.
+- **Follow SOLID principles and clean code patterns.** The user has
+  explicitly asked for ACID-compliant, readable, design-pattern-following
+  code. Every new component, hook, or module should have a single
+  responsibility and be easy to extend without modifying existing code.
 
 ---
 
-## Current file map (Phase 1)
+## Design patterns & conventions in this codebase
+
+### Backend (Java / Spring Boot)
+- **Service layer pattern**: `VisualizationService` orchestrates the
+  pipeline; individual engines (`CodeWrapper`, `CompilerService`,
+  `JdiStepEngine`) are focused, single-responsibility classes.
+- **Static factory methods** on response DTOs (`VisualizeResponse.success()`,
+  `VisualizeResponse.failure()`) rather than complex constructors.
+- **Fail-fast validation**: input validation happens at the controller
+  level before hitting the service layer.
+- **Phase-specific error reporting**: errors include `errorPhase` so the
+  frontend can show contextually appropriate messages.
+
+### Frontend (React / Vite)
+- **Custom hooks for state management**: `useVisualizer` and
+  `useStepPlayer` encapsulate all business logic. Components are pure
+  renderers.
+- **Centralized API client**: all backend calls go through
+  `src/api/visualize.js`. Components never call `fetch()` directly.
+- **CSS custom properties (design tokens)**: all colors, spacing, fonts,
+  and shadows are defined in `index.css` as CSS variables. Components
+  reference tokens, never hardcode values.
+- **BEM-style CSS naming**: `.component__element--modifier` pattern for
+  all class names (e.g. `.code-viewer__line--active`).
+- **Component structure**: each component has its own `.jsx` + `.css`
+  files in `src/components/`. No style prop spaghetti.
+
+### Adding new data structure visualizers
+When you add a new visualizer (e.g. `TreeVisualizer`, `StackVisualizer`):
+1. Create `src/components/YourVisualizer.jsx` + `.css`
+2. Follow the same pattern as `ArrayVisualizer.jsx`:
+   - Accept `currentStep` and `previousStep` props
+   - Extract relevant variables from `currentStep.variables`
+   - Render animated visualization
+   - Highlight changes vs `previousStep`
+3. Import and add to `App.jsx`'s right panel `app__viz-col` section
+4. No backend changes needed — the JDI engine already captures all
+   variable values; the frontend just decides how to render each type.
+
+---
+
+## Current file map (Phase 2)
 
 ```
 dsa-visualizer/
-├── pom.xml
-├── README.md                                    — full project context, architecture, bug history
-├── AGENTS.md                                     — this file
-└── src/main/
-    ├── java/com/dsaviz/
-    │   ├── DsaVisualizerApplication.java          — Spring Boot entry point
-    │   ├── controller/
-    │   │   └── VisualizeController.java           — REST endpoint /api/visualize
-    │   ├── model/
-    │   │   ├── VisualizeRequest.java              — {solutionCode, methodName, args}
-    │   │   ├── VisualizeResponse.java             — success/failure result incl. generatedSource on compile failure
-    │   │   └── StepSnapshot.java                  — one trace step: line number + variables map
-    │   └── engine/
-    │       ├── CodeWrapper.java                   — builds the full compilable source (user code + generated Main)
-    │       ├── SignatureParser.java                — regex-extracts method signature; has stripLeadingModifiers fix
-    │       ├── ParsedSignature.java                — simple data holder
-    │       ├── ArgLiteralBuilder.java              — raw string args -> Java literal declarations
-    │       ├── ResultPrinter.java                  — builds the println expression for the return value
-    │       ├── CompilerService.java                — javax.tools.JavaCompiler wrapper, compiles with -g
-    │       ├── JdiStepEngine.java                  — the core JDI engine: launch, attach, step, snapshot
-    │       ├── JdiValueConverter.java              — JDI Value -> plain Java value, incl. toString() for collections
-    │       └── VisualizationService.java           — orchestrates wrap -> compile -> trace, owns temp dir lifecycle
-    └── resources/
-        ├── application.properties
-        └── static/index.html                      — Phase 1 test page, no React yet (2 hardcoded arg inputs)
+├── pom.xml                                        — Maven build, Spring Boot 3.3.4
+├── README.md                                      — full project context, architecture, bug history
+├── AGENTS.md                                      — this file
+├── .gitignore
+├── src/main/
+│   ├── java/com/dsaviz/
+│   │   ├── DsaVisualizerApplication.java          — Spring Boot entry point
+│   │   ├── controller/
+│   │   │   └── VisualizeController.java           — REST: /api/visualize + /api/parse-signature
+│   │   ├── model/
+│   │   │   ├── VisualizeRequest.java              — {solutionCode, methodName, args}
+│   │   │   ├── VisualizeResponse.java             — success/failure result incl. generatedSource
+│   │   │   ├── StepSnapshot.java                  — one trace step: line number + variables map
+│   │   │   ├── ParseSignatureRequest.java         — {solutionCode, methodName}
+│   │   │   └── ParseSignatureResponse.java        — {returnType, params[{type, name}]}
+│   │   └── engine/
+│   │       ├── CodeWrapper.java                   — builds compilable source (user code + Main)
+│   │       ├── SignatureParser.java                — regex-extracts method signature
+│   │       ├── ParsedSignature.java                — simple data holder
+│   │       ├── ArgLiteralBuilder.java              — raw string args → Java literal declarations
+│   │       ├── ResultPrinter.java                  — builds println expression for return value
+│   │       ├── CompilerService.java                — javax.tools.JavaCompiler wrapper
+│   │       ├── JdiStepEngine.java                  — core JDI engine: launch, attach, step, snapshot
+│   │       ├── JdiValueConverter.java              — JDI Value → plain Java value
+│   │       └── VisualizationService.java           — orchestrates wrap → compile → trace
+│   └── resources/
+│       ├── application.properties
+│       └── static/index.html                      — Phase 1 test page (kept as backup)
+├── frontend/                                      — Vite + React frontend (Phase 2)
+│   ├── package.json
+│   ├── vite.config.js                             — dev proxy to Spring Boot :8080
+│   ├── index.html
+│   └── src/
+│       ├── main.jsx                               — React entry point
+│       ├── App.jsx                                — root component, two-panel layout
+│       ├── App.css                                — layout styles
+│       ├── index.css                              — design system (CSS custom properties)
+│       ├── constants.js                           — defaults, type placeholders
+│       ├── api/
+│       │   └── visualize.js                       — centralized API client
+│       ├── hooks/
+│       │   ├── useVisualizer.js                   — core state machine (trace lifecycle)
+│       │   └── useStepPlayer.js                   — auto-play with speed control
+│       └── components/
+│           ├── CodeEditor.jsx + .css              — CodeMirror 6 Java editor
+│           ├── CodeViewer.jsx + .css              — read-only traced code with line highlight
+│           ├── InputPanel.jsx + .css              — dynamic arg inputs from signature
+│           ├── VariablesPanel.jsx + .css           — live variables with diff highlighting
+│           ├── StepControls.jsx + .css             — play/prev/next/slider/speed controls
+│           ├── ArrayVisualizer.jsx + .css          — animated array box visualization
+│           └── ReturnValue.jsx + .css             — return value display
 ```
 
 ---
@@ -173,3 +268,20 @@ dsa-visualizer/
 5. Update README.md's "Bugs found and fixed" section with the new entry,
    following the same format as existing entries (what broke, why, the
    fix, verification status).
+
+---
+
+## Future roadmap context
+
+The project owner has stated the long-term vision is "very big." Known
+future directions include:
+- **Phase 3/4**: LinkedList, Tree, Graph visualization with real
+  pointer-chasing through JDI (not toString())
+- **Data structure visualizers**: Stack, Queue, HashMap-as-bucket-diagram,
+  all as animated React components following the ArrayVisualizer pattern
+- **AI integration**: planned but scope TBD — likely code explanation,
+  complexity analysis, or optimization suggestions
+- **Possible multi-language support** in the distant future
+
+When making architectural decisions, prefer extensibility and clean
+interfaces over premature optimization.
